# pareto-quantum-feature-augmentation

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
data/real/: corr_triangle_169ed9e61d.parquet  corr_triangle_e07cf3839f.parquet  dataset_169ed9e61d.parquet  dataset_e07cf3839f.parquet  dataset_v2_169ed9e61d.parquet  dataset_v2_e07cf3839f.parquet  prices_169ed9e61d.parquet  prices_e07cf3839f.parquet
data/synthetic/: seed_1024.parquet  seed_123.parquet  seed_42.parquet  seed_42_1000_500.parquet  seed_42_100_50.parquet  seed_42_10_5.parquet  seed_42_500_250.parquet  seed_42_5_5.parquet  seed_456.parquet  seed_789.parquet
data/synthetic_2k/: seed_123.parquet  seed_42.parquet  seed_456.parquet
docs/: CHANGES.md  INDEX.md
docs/designs/: classical_baselines.md  preprocessing.md  quantum_reservoir.md  real.md  synthetic.md  synthetic_hw.md  synthetic_hw_data.md  unified_quantum_design.md
docs/results/: synthetic_hw.md
docs/specs/: challenge.md
exploration/: __init__.py  e00_common.py  e01_data_generation.py  e02_classical_baseline.py  e03_quantum_feature_maps.py  e04_hybrid_workflows.py  e05_evaluation.py  e06_real_stock_data.py  results.md
plots/real/: ablation_delta.html  ablation_grouped_bars.html  ic_bar.html  mse_bar.html  pareto_vs_classical.html
plots/synthetic_hw/: error_hist.html  mitigation.html  mse_vs_features.html  mse_vs_training_size.html  noise_injection.html  noise_model_fit.html  packed_vs_sim_scatter.html  per_feature_corr.html  singleton_vs_sim_scatter.html  three_way_overlay.html
presentation/: pareto_optimal_quantum_feature_augmentation.pptx
results/synthetic_hw/: feature_detail.csv  mitigation.csv  noise_injection.csv  (+4 more)
scripts/: compare_features.py  fit_noise_model.py  mitigation_study.py  noise_injection.py  plot_feature_fidelity.py  plot_pareto_vs_classical.py  plot_real.py  plot_real_ablation.py  plot_real_pareto.py  plot_synthetic.py  plot_synthetic_hw.py  plot_unified.py  quantum_reservoir.py  run_real.py  run_synthetic.py  run_synthetic_hw.py  run_synthetic_hw_packed.py  run_synthetic_hw_singleton.py  run_synthetic_local.py  run_synthetic_tn1_packed.py
(+10340 files in other folders)
