[project]
name = "quantum-feature-augmentation-private"
version = "0.1.0"
description = "Quantum Feature Augmentation for Financial Market Prediction — YQuantum 2026 AWS x State Street Challenge"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "amazon-braket-pennylane-plugin",
    "amazon-braket-sdk",
    "matplotlib",
    "numpy",
    "pandas",
    "pennylane",
    "plotly[express]",
    "pyarrow",
    "scikit-learn",
    "scipy",
    "seaborn",
    "torch",
    "tqdm",
    "yfinance",
]
